src/test/compile-fail/put-in-fn.rs
// error-pattern: iterator function

fn f() -> int {
  put 10;
}

fn main() {
}
